move react to devdependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magicdidac/notifications",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "description": "Package to be able to use notifications in any react application",
   "keywords": [
@@ -23,11 +23,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.8",
+    "@types/react": "^18.2.19",
+    "react": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
-  "dependencies": {
-    "@types/react": "^18.2.19",
-    "react": "^18.2.0"
-  }
+  "dependencies": {}
 }
