Fix publish action

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -25,8 +25,9 @@ jobs:
               
       - name: Build package
         run: yarn build
-      
+
       - name: Publish package
+        working-directory: ./dist
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
